--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "semi": true,
   "trailingComma": "none",
   "singleQuote": true,
+  "plugins": ["prettier-plugin-organize-imports"],
   "printWidth": 80
 }
