--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test:unit": "ts-mocha ./tests/*spec.ts",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start:dev2": "ts-node-dev --respawn --transpile-only src/action2.ts",
-    "lint-and-fix": "eslint . --ext .ts --fix"
+    "start:engine": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start:action": "ts-node-dev --respawn --transpile-only src/action2.ts",
+    "lint-and-fix": "eslint . --ext .ts --fix",
+    "migrate:latest": "DATABASE_URL=postgres://postgres:postgres@localhost:5000/engine ts-node src/db/migrate-to-latest.ts",
+    "migrate:down": "DATABASE_URL=postgres://postgres:postgres@localhost:5000/engine ts-node src/db/migrate-down.ts",
+    "generate:types": "DATABASE_URL=postgres://postgres:postgres@localhost:5000/engine kysely-codegen --out-file=src/db/dbTypes.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@asteasolutions/zod-to-openapi": "^6.3.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/chai": "^4.3.9",
     "@types/expect": "^24.3.0",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.3",
+    "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "chai": "^4.3.10",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "kysely-codegen": "^0.11.0",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-sort-imports": "^1.7.2",
@@ -32,11 +38,16 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cron": "^3.1.6",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "kysely": "^0.26.3",
+    "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
   "engines": {
