--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:engine": "ts-node-dev --respawn --transpile-only src/index.ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "migrate:latest": "DATABASE_URL=postgres://postgres:postgres@localhost:5000/engine ts-node src/db/migrate-to-latest.ts",
+    "start:action": "ts-node-dev --respawn --transpile-only src/action2.ts",
     "migrate:down": "DATABASE_URL=${DATABASE_URL} ts-node src/db/migrate-down.ts",
     "generate:types": "DATABASE_URL=${DATABASE_URL} kysely-codegen --out-file=src/db/dbTypes.ts",
     "build": "tsc",
@@ -22,7 +23,9 @@
     "@types/chai": "^4.3.9",
     "@types/expect": "^24.3.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mocha": "^10.0.3",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
@@ -36,8 +39,7 @@
     "prettier-plugin-sort-imports": "^1.7.2",
     "ts-mocha": "^10.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "@types/jsonwebtoken": "^9.0.5"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -48,6 +50,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "kysely": "^0.26.3",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
